--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -74,9 +74,11 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="MeasPosition.CS" />
     <Compile Include="OptDev.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestResult.cs" />
     <EmbeddedResource Include="DevConnectSet.resx">
       <DependentUpon>DevConnectSet.cs</DependentUpon>
     </EmbeddedResource>
