--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -75,7 +75,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="MeasPosition.CS" />
-    <Compile Include="OptDev.cs" />
+    <Compile Include="optStatus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestResult.cs" />
