--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CGloabal.cs" />
     <Compile Include="DevConnectSet.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -91,6 +92,7 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+      <SubType>Designer</SubType>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
