--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -67,6 +67,7 @@
     <Compile Include="DevParamSet.Designer.cs">
       <DependentUpon>DevParamSet.cs</DependentUpon>
     </Compile>
+    <Compile Include="Driver\CommonFuncs.cs" />
     <Compile Include="Driver\E5080B.cs" />
     <Compile Include="Driver\visa32.cs" />
     <Compile Include="Form1.cs">
