--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -47,6 +47,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AppTime.cs" />
     <Compile Include="CGloabal.cs" />
     <Compile Include="DevConnectSet.cs">
       <SubType>Form</SubType>
