--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -79,6 +79,12 @@
     </Compile>
     <Compile Include="ini.cs" />
     <Compile Include="IniFile.cs" />
+    <Compile Include="LoginForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="LoginForm.Designer.cs">
+      <DependentUpon>LoginForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="MeasPosition.CS" />
     <Compile Include="optStatus.cs" />
     <Compile Include="Program.cs" />
@@ -96,6 +102,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
       <SubType>Designer</SubType>
+    </EmbeddedResource>
+    <EmbeddedResource Include="LoginForm.resx">
+      <DependentUpon>LoginForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
