--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>32-2.ico</ApplicationIcon>
+    <ApplicationIcon>32.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="NLog, Version=4.0.0.0, Culture=neutral, PublicKeyToken=5120e14c03d0593c, processorArchitecture=MSIL">
@@ -103,6 +103,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SocketHelper.cs" />
+    <Compile Include="SyncServerTime.cs" />
     <Compile Include="TestResult.cs" />
     <EmbeddedResource Include="DevConnectSet.resx">
       <DependentUpon>DevConnectSet.cs</DependentUpon>
@@ -147,7 +148,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="32-2.ico" />
     <Content Include="32.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
