--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -102,6 +102,7 @@
     <Compile Include="optStatus.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SendBuff.cs" />
     <Compile Include="SocketHelper.cs" />
     <Compile Include="SyncServerTime.cs" />
     <Compile Include="TestResult.cs" />
