--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -154,6 +154,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="32.ico" />
+    <Content Include="度量.ico" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.7.2">
