将测试项的列名改为中文

--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -151,5 +151,8 @@
   <ItemGroup>
     <Content Include="32.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Connected Services\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
