1.在配方设置、开路位置 添加初始值，防止不能再次量测； 2.解决第一次不能使用空格进行量测的缺陷； 3.更改loopwork的实现方式； 4.添加实时测试模式下截图功能；

--- a/TDRv/TDRv.csproj
+++ b/TDRv/TDRv.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
     <None Include="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
@@ -154,6 +155,10 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="32.ico" />
+    <None Include="Resources\Start.ico" />
+    <None Include="Resources\Start.bmp" />
+    <None Include="Icon\测试.png" />
+    <None Include="Icon\暂停.png" />
     <Content Include="度量.ico" />
   </ItemGroup>
   <ItemGroup>
